# VAMPIRE

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
configs/: default.cfg
dramSpec/: example.cfg  example.cfg~
src/: README.md  address.cpp  address.h  command.cpp  command.h  config.cpp  config.h  consts.h  dramSpec.cpp  dramSpec.h  dramStruct.cpp  dramStruct.h  equations.cpp  equations.h  globalDebug.h  helper.cpp  helper.h  main.cpp  main.h  mapping.cpp  parser.cpp  parser.h  statistics.cpp  statistics.h  vampire.cpp  vampire.h
tests/: functionaltests.py  helper.py  run_tests.sh  test_autoprecharge.py  test_cust_vendor.py  test_parser.py  test_vendor.py  vampireAsciiToBin.py
tests/configs/cust_vendor/: vendorC.cfg
tests/traces/: 0.0-autoprecharge-read.trace  0.1-autoprecharge-read.trace  1.0-autoprecharge-write.trace  1.1-autoprecharge-write.trace  common.rand.trace.c.csv  common.rand.trace.cust.csv
tests/traces/autoprecharge/: 0.0-autoprecharge-read.trace  0.1-autoprecharge-read.trace  1.0-autoprecharge-write.trace  1.1-autoprecharge-write.trace
tests/traces/parser/: 0-mean.trace  0-rd_wr.trace  0-wr.trace
tools/: make_sample_trace.cpp
